--- a/oauth/redirect/intentionally_long_directory_name/to_hide_token_in_address_bar/still_need_to_add_more_characters/but_I_dont_know_what_else_to_say/I_will_just_generate_some_random_string/rsnxh6cjm08oefbznda54mgce1lfi89oa3gw6lr6/ha5daayx8au6tosio9evov7x1s2qejxzu0uaqvzn/lxj71wviygdkcwb09y14rkiiv0rgap1n52h07zkm/pyfurq9t674cghvbn2fxdrpvnr3vobypy2z1mp8l/login.html
+++ b/oauth/redirect/intentionally_long_directory_name/to_hide_token_in_address_bar/still_need_to_add_more_characters/but_I_dont_know_what_else_to_say/I_will_just_generate_some_random_string/rsnxh6cjm08oefbznda54mgce1lfi89oa3gw6lr6/ha5daayx8au6tosio9evov7x1s2qejxzu0uaqvzn/lxj71wviygdkcwb09y14rkiiv0rgap1n52h07zkm/pyfurq9t674cghvbn2fxdrpvnr3vobypy2z1mp8l/login.html
@@ -13,8 +13,11 @@
       for(const pair of pairs) {
         const splited = pair.split("=");
         loginData[splited[0]] = splited[1];
+        if(splited[0] === "access_token") {
+          sessionStorage.setItem("twitch_chat_analyzer_access_token", splited[1]);
+        }
       }
-      sessionStorage.setItem("loginData", JSON.stringify(loginData));
+      sessionStorage.setItem("twitch_chat_analyzer_login_json", JSON.stringify(loginData));
       location.replace("/twitch-chat-analyzer");
     </script>
   </head>
